simple/train/data/static/ui/RouteExplorer/scss/_select-route.scss
body.rex-page-routes {
    div.paths-list {
        display: table; border-collapse: collapse; margin: 10px 0 20px;
        > .list-header { display: table-row; font-size: 15pt; }
        > .list-body { display: table-row-group; }
        > .list-body > .list-item { display: table-row; }
        .index-cell, .path-cell, .count-cell { display: table-cell; }

        > .list-header > div { padding: 15px 40px; font-weight: bold; }
        > .list-body > .list-item {
            cursor: pointer;
            color: $text-color; text-decoration: none;
            background-color: $table-bg-accent;
            border: 1px solid #ebedec;
            > div { padding: 40px; }

            > div.index-cell {
                color: #939599;
                font-size: 30pt;
                vertical-align: middle;
            }

            &:hover {
                background-color: $table-bg-hover;

                > div.index-cell {
                    $table-highlight-border-color: #bcbcbc;

                    background-color: $table-bg-hover;
                    color: $rex-accent-color;
                    position: relative;

                    :before {
                        content: "";
                        position: absolute;
                        top: -1px; bottom: -1px; right: -1px; left: -1px;
                        border: 2px solid $table-highlight-border-color;
                        border-right: 5px solid $rex-accent-color;
                    }

                    :after {
                        $triangle-size: 20px;
                        content: "";
                        display: block;
                        height: $triangle-size; width: $triangle-size;
                        background-color: #fff;
                        border-width: 2px; border-style: solid;
                        border-color: $table-highlight-border-color transparent transparent $table-highlight-border-color;
                        position: absolute;
                        top: 50%;
                        left: 0;
                        margin-top: (-$triangle-size / 2);
                        margin-left: (-$triangle-size / 2 + 1);
                        @include rotate(-45deg);
                    }
                }
            }
        }

        .stop-list {
            .stop-origin, .stop-destination { background-color: white; }
        }

        .count-bar { width: 100px; height: 5px; }
        .count-bar-value { background-color: #b3b3b3; height: 100%; }
    }
}

